fixed alignment and sizing issues

--- a/src/app/core/pages/repository-info/pull-requests/pull-requests.component.scss
+++ b/src/app/core/pages/repository-info/pull-requests/pull-requests.component.scss
@@ -4,7 +4,7 @@ $common-font: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
   sans-serif, Apple Color Emoji, Segoe UI Emoji;
 
 .pr-container {
-  margin: 0px 7.3rem;
+  margin: 0px 24px;
   padding: 0px 2rem;
   .welcome-component {
     margin: 2vw 0vw;
